#306 Remove the ArduinoIDE dependency
* Better install progress reporting
* Removed dialog before installing
* Refactored library installation
* New splash